Fix grid gaps

--- a/src/grid/_grid.scss
+++ b/src/grid/_grid.scss
@@ -39,19 +39,10 @@ $eve-grid-vertical-alignments: (
         $gap: map-get($eve-grid-gaps, $eve-grid-gap) / 2;
 
         &.has-gap-#{$eve-grid-gap} {
-            margin: 0 (-$gap);
+            margin: -#{$gap};
 
             > .eve-column {
-                padding: 0 $gap;
-
-                @for $i from 1 through $eve-grid-cells-count {
-                    &.is-#{$i} {
-                        $width: calc(#{percentage($i / $eve-grid-cells-count)} - (#{$gap} * 2));
-
-                        flex: 1 $width;
-                        max-width: $width;
-                    }
-                }
+                padding: $gap;
             }
         }
     }
@@ -68,6 +59,27 @@ $eve-grid-vertical-alignments: (
         }
     }
 
+    &.is-multiline {
+        flex-wrap: wrap;
+
+        @each $eve-grid-gap in map-keys($eve-grid-gaps) {
+            $gap: map-get($eve-grid-gaps, $eve-grid-gap) / 2;
+
+            &.has-gap-#{$eve-grid-gap} {
+                > .eve-column {
+                    @for $i from 1 through $eve-grid-cells-count {
+                        &.is-#{$i} {
+                            $width: calc(#{percentage($i / $eve-grid-cells-count)} - (#{$gap} * 2));
+
+                            flex: 1 $width;
+                            max-width: $width;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
     @media (max-width: 480px) {
         flex-direction: column;
 
@@ -75,21 +87,5 @@ $eve-grid-vertical-alignments: (
             flex: 1 100% !important;
             max-width: 100% !important;
         }
-
-        @each $eve-grid-gap in map-keys($eve-grid-gaps) {
-            $gap: map-get($eve-grid-gaps, $eve-grid-gap) / 2;
-
-            &.has-gap-#{$eve-grid-gap} {
-                margin: (-$gap) 0;
-
-                > .eve-column {
-                    padding: $gap 0;
-                }
-            }
-        }
-    }
-
-    &.is-multiline {
-        flex-wrap: wrap;
     }
 }
